--- a/banahaw/banahaw.css
+++ b/banahaw/banahaw.css
@@ -2,14 +2,23 @@
 	height: 500px;
 	width: 50%;
 	margin: auto;
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(255,255,255,.3);
 	padding: 20px;
-	margin-top: 50px;
+	padding-left: 200px;
+	margin-top: -700px;
 }
-#user{
-	margin: auto;
-}
-body{
+
+#background{
 	background: url("background.jpg") no-repeat;
 	background-size: 100%;
+	height:800px;
+	width: 100%;
+}
+.input{
+	-webkit-border-radius: 10px;
+	background-color: gray;
+}
+body {overflow-y:hidden}
+img.blur{
+	filter: blur(50px);
 }
