check mo nga yung font kung nagbago dyan sayo

--- a/banahaw/templates/banahaw.login.html
+++ b/banahaw/templates/banahaw.login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>lBanahaw Log-in</title>
-	<link rel="stylesheet" type="text/css" href="../static/banahaw.css">
-	<link rel="stylesheet" type="text/css" href="../static/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/banahaw.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
 
 
 </head>
@@ -13,26 +13,26 @@
 		      
      		  </div>
 	   <div class="jumbotron">
-        		<img id="logo" src="../others/banahaw.png"></br>
-				<p>USERNAME</p><input class="input form-control" type="text" name="user" height="20" placeholder="username" autofocus> </br>
-				<p>PASSWORD</p><input class="input form-control" type="password" name="password" placeholder="password" ></br>
-				<button type="button" class="btn btn-lg btn-success">ENTER</button>
+        		<img id="logo" src="../static/img/banahaw.png"></br></br></br></br>
+				<input class="input form-control" type="text" name="user" height="20" placeholder="username" autofocus> </br>
+				<input class="input form-control" type="password" name="password" placeholder="password" ></br>
+				<button type="button" class="btn btn-lg btn-success">LOG IN</button>
 			 </div>	
 		</div>
 				
 
 
 
-<script src="../static/jquery-3.1.1.js"></script>
+<script src="../static/js/jquery-3.1.1.js"></script>
 <script>
 $(document).ready(function(){
 var header = $('#background');
 
 var backgrounds = new Array(
-    'url("../others/background.jpg")'
-  , 'url("../others/background2.jpg")'
-  , 'url("../others/background3.jpg")'
-  , 'url("../others/background4.jpg")'  
+    'url("../static/img/background.jpg")'
+  , 'url("../static/img/background2.jpg")'
+  , 'url("../static/img/background3.jpg")'
+  , 'url("../static/img/background4.jpg")'  
 );
 
 var current = 0;
