--- a/banahaw/static/css/banahaw.css
+++ b/banahaw/static/css/banahaw.css
@@ -1,4 +1,4 @@
-@font-face{font-family: "DK Blue Sheep";src:url("../dk_blue_sheep/DK Blue Sheep.otf")format("opentype");}
+@font-face{font-family: "DK Blue Sheep";src:url("dk_blue_sheep/DK Blue Sheep.otf")format("opentype");}
 
 #background{
 	background: url("background.jpg") no-repeat;
