--- a/banahaw/templates/banahaw.login.html
+++ b/banahaw/templates/banahaw.login.html
@@ -11,15 +11,19 @@
 	<div id="background">
 
 		      
-     		  </div>
+    </div>
 	   <div class="jumbotron">
         		<img id="logo" src="../static/img/banahaw.png"></br></br></br></br>
 				<input class="input form-control" type="text" name="user" height="20" placeholder="username" autofocus> </br>
 				<input class="input form-control" type="password" name="password" placeholder="password" ></br>
 				<button type="button" class="btn btn-lg btn-success">LOG IN</button>
-			 </div>	
-		</div>
-				
+			 
+				<div id="error">
+							
+				</div>
+
+		</div>	
+		
 
 
 
