--- a/banahaw/templates/main-page.html
+++ b/banahaw/templates/main-page.html
@@ -2,28 +2,56 @@
 <html>
 <head>
 	<title>Main Page</title>
-	<link rel="stylesheet" type="text/css" href="../static/banahaw.css">
-	<link rel="stylesheet" type="text/css" href="../static/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/banahaw.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/dashboard.css">
+   <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+   <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+	    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Banahaw Heals Spa</a>
         </div>
-        
-    <div class="container theme-showcase"></div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Logout</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </nav>
+    
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li><a href="#">Admin <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Transactions</a></li>
+            <li><a href="#">Promos</a></li>
+            <li><a href="#">Daily Report</a></li>
+            <li><a href="#">Reservations</a></li>
+          </ul>
+          
+        </div>
+        </div>
+        </div>
 
 
 
-
-    	<script src="jquery.js"></script>
-    	<script src="bootstrap.min.js"></script>
+    	<script src="../static/js/jquery.js"></script>
+    	<script src="../static/js/bootstrap.min.js"></script>
+      <script src="../static/js/holder.min.js"></script>
+      <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
