yung admin.html tingnan mo

--- a/banahaw/static/css/dashboard.css
+++ b/banahaw/static/css/dashboard.css
@@ -1,12 +1,13 @@
-/*
- * Base structure
- */
+@font-face{font-family: "DK Blue Sheep";
+  src:url("dk_blue_sheep/DK Blue Sheep.otf") format("opentype");}
 
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  font-family: "DK Blue Sheep" !important;
+  font-size: larger;
 }
-
+p{
+  padding-left: 15px;
+}
 
 /*
  * Global add-ons
@@ -31,7 +32,7 @@ body {
 
 /* Hide for mobile, show later */
 .sidebar {
-  display: none;
+  
 }
 @media (min-width: 768px) {
   .sidebar {
@@ -102,4 +103,38 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+.col-sm-9{
+  position: absolute!important;
+  padding-top: 60px;
+}
+
+input{
+  font-family: "DK Blue Sheep";
+}
+img{
+  padding-left: 20px;
+  padding-top: 80%;
+}
+.col-sm-3{
+  background-color: rgba(52,141,35,.3) !important;
+  position: fixed;
+}
+.navbar{
+  background-color: rgba(52,141,35,.7) !important;
+  }
+a{
+  color: black !important;
+  }
+#div1{
+  height: 610px;
+  width: 500px;
+  background-color: red;
+  margin-top: 10px;
+}
+#div2{
+  height: 610px;
+  width: 500px;
+  background-color: red;
+  margin-top: 10px;
 }
