--- a/banahaw/templates/main-page.html
+++ b/banahaw/templates/main-page.html
@@ -34,7 +34,7 @@
     
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <div class="col-md-3 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="#">Admin <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Transactions</a></li>
@@ -42,7 +42,7 @@
             <li><a href="#">Daily Report</a></li>
             <li><a href="#">Reservations</a></li>
           </ul>
-          
+          <img src="../static/img/banahaw.png">
         </div>
         </div>
         </div>
