--- a/banahaw/static/css/banahaw.css
+++ b/banahaw/static/css/banahaw.css
@@ -6,9 +6,7 @@
 	background-size: 100%;
 	height:800px;
 	width: 100%;
-	
-
-}
+	}
 .input{
 	-webkit-border-radius: 10px;
 	background-color: rgba(72,70,70,.3);
@@ -16,22 +14,19 @@
 	height: 3em !important;
 	font-family: "DK Blue Sheep";
 	width: 27em !important;
-}
+	}
 p{
 	font-family: "DK Blue Sheep";
 	font-weight: 300em;
-}
-body {overflow-y:hidden}
+	}
+/*body {overflow-y:hidden}*/
 .btn{
 	width: 20em;
 	height: 2.5em;
 	-webkit-border-radius: 10px;
 	margin-left: 7%;
 	font-family: "DK Blue Sheep";
-}
-input.active{
-	box-shadow: none;
-}
+	}
 .jumbotron{
 	height: 550px;
 	width: 30%;
@@ -42,7 +37,7 @@ input.active{
 	position: absolute;
 	margin-left: 35%;
 	-webkit-border-radius: 10px;
-}
+	}
 #error{
 	width: 85%;
 	height: 10%;
@@ -50,22 +45,12 @@ input.active{
 	margin-top: 5%;
 	margin-left: 6%;
 	-webkit-border-radius: 10px;
-}
+	}
 
-.navbar{
-	background-color: rgba(52,141,35,.5) !important;
-	margin-bottom: none;
-}
-a{
-	color: black !important;
-}
+/*admin page*/
 
-#daily{
-	height: 500px;
+#div1{
+	background-color: white;
 	width: 100%;
-	background-color: red;
-	margin-top: 1000px;
-}
-.nav-sidebar{
-	height: 100%;
+	height: 800px;
 }
