--- a/banahaw/templates/admin.html
+++ b/banahaw/templates/admin.html
@@ -17,23 +17,19 @@
     <!-- Custom CSS -->
     <link href="../static/css/sb-admin.css" rel="stylesheet">
 
-    <!-- Morris Charts CSS -->
-    <link href="../static/css/plugins/morris.css" rel="stylesheet">
+    
 
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../static/css/banahaw.css" rel="stylesheet">
+    <lin href="../static/css/banahaw.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    
 
 </head>
 
-<body>
+<body ng-app="myApp">
 
     <div id="wrapper">
 
@@ -47,49 +43,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Banahaw Heals Spa</a>
+                <a class="navbar-brand" href="admin.html"><img id="logo" src="../static/img/banahaw4.png"></a>
             </div>
             <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu message-dropdown">
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                       
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>Logout</strong>
-                                        </h5>
-                                        
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        
-                
+            
                 
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
-                        <a href="admin.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard (admin)</a>
+                    <li>
+                        <a href=""><i class="fa fa-fw fa-dashboard"></i> Dashboard (admin)</a>
                     </li>
                     
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Transactions <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="#morris-area-chart">Members</a>
+                                <a href="#member1">Members</a>
                             </li>
                             <li>
-                                <a href="#">Non-Members</a>
+                                <a href="#member2">Non-Members</a>
                             </li>
                             <li>
-                                <a href="#">Add Member</a>
+                                <a href="#member3">Add Member</a>
                             </li>
                             <li>
                                 <a href="#">Delete Member</a>
@@ -101,7 +78,7 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo1"><i class="fa fa-fw fa-arrows-v"></i> Reservations <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo1" class="collapse">
                             <li>
-                                <a href="#morris-area-chart">Add Reservations</a>
+                                <a href="#">Add Reservations</a>
                             </li>
                             <li>
                                 <a href="#">View Reservations</a>
@@ -113,7 +90,7 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo2"><i class="fa fa-fw fa-arrows-v"></i> Daily Reports <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo2" class="collapse">
                             <li>
-                                <a href="#morris-area-chart">View Daily Reports</a>
+                                <a href="">View Daily Reports</a>
                             </li>
                             
                         </ul>
@@ -123,10 +100,10 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo3"><i class="fa fa-fw fa-arrows-v"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo3" class="collapse">
                             <li>
-                                <a href="#morris-area-chart">Add Users</a>
+                                <a href="">Add Users</a>
                             </li>
                             <li>
-                                <a href="#morris-area-chart">Delete Users</a>
+                                <a href="">Delete Users</a>
                             </li>
                         </ul>
                     </li>
@@ -135,18 +112,18 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
-
         <div id="page-wrapper">
-
-           <div id="div1"></div>
-                <!-- /.row -->
-
-            </div>
-            <!-- /.container-fluid -->
-
+            <p id="member1"></p>
+            <br><br>
+            <div ng-view></div>
         </div>
-        <!-- /#page-wrapper -->
+        
 
+
+
+
+        
+       
     </div>
     <!-- /#wrapper -->
 
@@ -156,10 +133,30 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="../static/js/bootstrap.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
+    
+    
+    <script src="../static/js/angular.min.js"></script>
+    <script src="../static/js/angular-route.js"></script>
+
+    <script>
+    var app = angular.module("myApp", ["ngRoute"]);
+    app.config(function($routeProvider) {
+     $routeProvider
+     .when("/", {
+        templateUrl : "content.html"
+        })
+     .when("/member1", {
+        templateUrl : "content.html"
+        })
+     .when("/member2", {
+        templateUrl : "content.html"
+        })
+     .when("/member3", {
+        templateUrl : "content.html"
+        })
+    
+    });
+    </script>
 
 </body>
 
