--- a/banahaw/templates/banahaw.login.html
+++ b/banahaw/templates/banahaw.login.html
@@ -14,8 +14,8 @@
     </div>
 	   <div class="jumbotron">
         		<img id="logo" src="../static/img/banahaw.png"></br></br></br></br>
-				<input class="input form-control" type="text" name="user" height="20" placeholder="username" autofocus> </br>
-				<input class="input form-control" type="password" name="password" placeholder="password" ></br>
+				<input class="input form-control" type="text" name="user" height="20" placeholder="username" required autofocus> </br>
+				<input class="input form-control" type="password" name="password" placeholder="password" required></br>
 				<button type="button" class="btn btn-lg btn-success">LOG IN</button>
 			 
 				<div id="error">
