--- a/banahaw/templates/admin.html
+++ b/banahaw/templates/admin.html
@@ -65,6 +65,13 @@
                             <li>
                                 <a href="#member2">Non-Members</a>
                             </li>
+                            </ul>
+                    </li>
+                    
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo1"><i class="fa fa-fw fa-arrows-v"></i> Membership <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo1" class="collapse">
+
                             <li>
                                 <a href="#member3">Add Member</a>
                             </li>
@@ -75,8 +82,8 @@
                     </li>
                     
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo1"><i class="fa fa-fw fa-arrows-v"></i> Reservations <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo1" class="collapse">
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo2"><i class="fa fa-fw fa-arrows-v"></i> Reservations <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo2" class="collapse">
                             <li>
                                 <a href="#">Add Reservations</a>
                             </li>
@@ -87,8 +94,8 @@
                     </li>
 
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo2"><i class="fa fa-fw fa-arrows-v"></i> Daily Reports <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo2" class="collapse">
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo3"><i class="fa fa-fw fa-arrows-v"></i> Daily Reports <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo3" class="collapse">
                             <li>
                                 <a href="">View Daily Reports</a>
                             </li>
@@ -97,8 +104,8 @@
                     </li>
 
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo3"><i class="fa fa-fw fa-arrows-v"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo3" class="collapse">
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo4"><i class="fa fa-fw fa-arrows-v"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo4" class="collapse">
                             <li>
                                 <a href="">Add Users</a>
                             </li>
