--- a/banahaw/templates/content.html
+++ b/banahaw/templates/content.html
@@ -16,13 +16,13 @@
                 <tr>
                   <td>Name</td>
                   <td></td>
-                  <td><input class="fillup" type="text" name="" size="60"></td>
+                  <td><input class="fillup" type="text" name=""></td>
                   
                 </tr>
                 <tr>
                   <td>Branch</td>
                   <td></td>
-                  <td><input class="fillup" type="text" name=""  size="60"></td>
+                  <td><input class="fillup" type="text" name=""></td>
                   
                 </tr>
                 <tr>
@@ -72,7 +72,7 @@
                 <tr>
                   <td></td>
                   <td></td>
-                  <td><textarea></textarea></td>
+                  <td><textarea id="area1"></textarea></td>
                   
                 </tr>
                 <tr>
@@ -83,7 +83,18 @@
                   </select></td>
                   
                 </tr>
-                
+                <tr>
+                  <td>Total</td>
+                  <td></td>
+                  <td><textarea id="area2"></textarea></td>
+                  
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><input type="submit" name="" value="Confirm"><input type="submit" name="" value="Cancel"></td>
+                  
+                </tr>
                 
                 
               </tbody>
@@ -91,7 +102,8 @@
           </div>
 
 	</div>
-	
+	</div>
+
 
 
 	<div>
@@ -105,17 +117,187 @@
         	<strong>Not A Member! Please try again</strong><img src="../static/img/x.png">
     	</div>
     </div>
-    
- </div>
+</div>
 
 <p id="member2">2</p>
 <br><br>
+
 <div id="div2">
+
+	<div id="div1">
+	<div class="form">
+		<div class="table-responsive">
+            <table class="table table-striped">
+              
+              <tbody>
+                <tr>
+                  <td>Name</td>
+                  <td></td>
+                  <td><input class="fillup" type="text" name=""></td>
+                  
+                </tr>
+                <tr>
+                  <td>Branch</td>
+                  <td></td>
+                  <td><input class="fillup" type="text" name=""></td>
+                  
+                </tr>
+                <tr>
+                  <td>Time/Date</td>
+                  <td></td>
+                  <td><input class="fillup" type="datetime-local" name=""  size="60"></td>
+                  
+                </tr>
+                <tr>
+                  <td>Regular Services</td>
+                  <td></td>
+                  <td><select>
+                  	 <option value="">.....</option>
+                  	 <option value="">Relaxing Swedish Massage</option>
+  					 <option value="">5-in-1 Signature Massage</option>
+  					 <option value="">Hot Stone Massage</option>
+  					 <option value="">Shiatsu Massage</option>
+                  </select></td>
+                  
+                </tr>
+                <tr>
+                  <td>Add-ons</td>
+                  <td></td>
+                  <td><select>
+                  	<option value="">.....</option>
+                  	<option value="">Netibo Healing</option>
+                  	<option value="">Ventusa Therapy</option>
+                  	<option value="">Cranio Sacral</option>
+                  	<option value="">Turtlewalk Massage</option>
+                  	<option value="">Steam Bath</option>
+                  	<option value="">Ear Candling</option>
+                  	<option value="">Ear Massage</option>
+                  	<option value="">Back Massage</option>
+                  	<option value="">Head Massage</option>
+                  	<option value="">Foot Scrub</option>
+                  	<option value="">Foot Reflex</option>
+                  	<option value="">Hand Scrub</option>
+                  	<option value="">Hand Reflex</option>
+                  	<option value="">Hot Stone Foot Reflex</option>
+                  	<option value="">Lower Extermeties Massage</option>
+                  	<option value="">Hair spa</option>
+                  	<option value="">Body Scrub</option>
+
+                  </select></td>
+                  
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><textarea id="area1"></textarea></td>
+                  
+                </tr>
+                <tr>
+                  <td>Name of Attendant</td>
+                  <td></td>
+                  <td><select>
+                  	<option value="">.....</option>
+                  </select></td>
+                  
+                </tr>
+                <tr>
+                  <td>Total</td>
+                  <td></td>
+                  <td><textarea id="area2"></textarea></td>
+                  
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><input type="submit" name="" value="Confirm"><input type="submit" name="" value="Cancel"></td>
+                  
+                </tr>
+                
+                
+              </tbody>
+            </table>
+          </div>
+
+	</div>
+	
+
+
+	<div>
+		<input class="input form-control" type="text" name="" placeholder="Customer Name :" autofocus="true"> 
+		
+    </div>
 </div>
 
 <p id="member3">3</p>
 <br><br>
+
 <div id="div3">
+	<div class="form">
+		<div class="table-responsive">
+            <table class="table table-striped">
+              
+              <tbody>
+                <tr>
+                  <td>Type</td>
+                  <td></td>
+                  <td><select>
+                  	<option>Personalized</option>
+                  	<option>Family</option>
+                  </select></td>
+                  
+                </tr>
+                <tr>
+                  <td>Branch</td>
+                  <td></td>
+                  <td><select></select></td>
+                  
+                </tr>
+                <tr>
+                  <td>Name</td>
+                  <td></td>
+                  <td><input class="fillup" type="text" name=""  size="60"></td>
+                  
+                </tr>
+                <tr>
+                  <td>Sub</td>
+                  <td></td>
+                  <td></td>
+                  
+                </tr>
+                
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><textarea id="area1"></textarea></td>
+                  
+                </tr>
+                
+                <tr>
+                  <td>Total</td>
+                  <td></td>
+                  <td><textarea id="area2"></textarea></td>
+                  
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><input type="submit" name="" value="Confirm"><input type="submit" name="" value="Cancel"></td>
+                  
+                </tr>
+                
+                
+              </tbody>
+            </table>
+          </div>
+
+	</div>
+	</div>
+</div>
+
+
+	
+
+
 
 </div>
 
