--- a/banahaw/static/css/content.css
+++ b/banahaw/static/css/content.css
@@ -5,12 +5,16 @@
 	padding: 5px;
 }
 #div2{
-	background-color: green;
 	height:700px ;
 	width: 100%;
 }
 #div3{
-	background-color: blue;
+	
+	height:700px ;
+	width: 100%;
+}
+#div4{
+	
 	height:700px ;
 	width: 100%;
 }
@@ -32,9 +36,16 @@ input{
 	width: 1000px;
 }
 .fillup{
-	size: 50px;
-	column-span: 2;
+	width: 20px;
 }
 select{
 	width: 250px;
+}
+#area1{
+	height: 100px;
+	width: 250px;
+}
+#area2{
+	height: 150px;
+	width: 450px;
 }
