wala nang textarea

--- a/banahaw/static/css/content.css
+++ b/banahaw/static/css/content.css
@@ -100,3 +100,10 @@ ul.tab li a:focus, .active {background-color: #ccc;}
     border: 1px solid #ccc;
     border-top: none;
 }
+
+/*calendar css*/
+#calendar {
+		max-width: 700px;
+		margin: 0 auto;
+	}
+
