--- a/banahaw/templates/content.html
+++ b/banahaw/templates/content.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset='utf-8' />
 <link href="../static/css/content.css" rel="stylesheet">
 <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+
 <link href='../static/css/fullcalendar.min.css' rel='stylesheet' />
 <link href='../static/css/fullcalendar.print.min.css' rel='stylesheet' media='print' />
-<script src='../static/js/moment.min.js'></script>
-<script src='../static/js/jquery.min.js'></script>
-<script src='../static/js/jquery-ui.min.js'></script>
-<script src='../static/js/fullcalendar.min.js'></script>
+
 	<title></title>
 </head>
 <body>
@@ -102,12 +101,7 @@
                   </select></td>
                   
                 </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area1"></textarea></td>
-                  
-                </tr>
+                
                 <tr>
                   <td>Name of Attendant</td>
                   <td></td>
@@ -116,12 +110,7 @@
                   </select></td>
                   
                 </tr>
-                <tr>
-                  <td>Total</td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area2"></textarea></td>
-                  
-                </tr>
+                
                 <tr>
                   <td></td>
                   <td></td>
@@ -218,12 +207,7 @@
                   </select></td>
                   
                 </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area1"></textarea></td>
-                  
-                </tr>
+                
                 <tr>
                   <td>Name of Attendant</td>
                   <td></td>
@@ -232,12 +216,7 @@
                   </select></td>
                   
                 </tr>
-                <tr>
-                  <td>Total</td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area2"></textarea></td>
-                  
-                </tr>
+                
                 <tr>
                   <td></td>
                   <td></td>
@@ -318,12 +297,7 @@
                   
                 </tr>
 
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area2"></textarea></td>
-                  
-                </tr>
+                
                 <tr>
                   <td></td>
                   <td></td>
@@ -361,12 +335,7 @@
                   <td><input class="input form-control" type="text" name=""></td>
                   
                 </tr>
-                <tr>
-                  <td>Info</td>
-                  <td></td>
-                  <td><textarea class="input form-control" id="area2"></textarea></td>
-                  
-                </tr>
+                
                 
                 <tr>
                   <td></td>
@@ -538,11 +507,7 @@
 <p id="reserve">7</p>
 <br><br>
 <div class="div-content">
-	<div id="form2">
-		
-
-
-	</div>
+	<div id='calendar'></div>
 </div>
 
 
@@ -568,6 +533,109 @@ function openTab(evt, tabName) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
+
+
+
+<script type="text/javascript">
+$(document).ready(function() {
+		
+		$('#calendar').fullCalendar({
+			header: {
+				left: 'prev,next today',
+				center: 'title',
+				right: 'month,agendaWeek,agendaDay'
+			},
+			defaultDate: '2016-12-12',
+			navLinks: true, // can click day/week names to navigate views
+			selectable: true,
+			selectHelper: true,
+			select: function(start, end) {
+				var title = prompt('Event Title:');
+				var eventData;
+				if (title) {
+					eventData = {
+						title: title,
+						start: start,
+						end: end
+					};
+					$('#calendar').fullCalendar('renderEvent', eventData, true); // stick? = true
+				}
+				$('#calendar').fullCalendar('unselect');
+			},
+			editable: true,
+			eventLimit: true, // allow "more" link when too many events
+			events: [
+				{
+					title: 'All Day Event',
+					start: '2016-12-01'
+				},
+				{
+					title: 'Long Event',
+					start: '2016-12-07',
+					end: '2016-12-10'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2016-12-09T16:00:00'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2016-12-16T16:00:00'
+				},
+				{
+					title: 'Conference',
+					start: '2016-12-11',
+					end: '2016-12-13'
+				},
+				{
+					title: 'Meeting',
+					start: '2016-12-12T10:30:00',
+					end: '2016-12-12T12:30:00'
+				},
+				{
+					title: 'Lunch',
+					start: '2016-12-12T12:00:00'
+				},
+				{
+					title: 'Meeting',
+					start: '2016-12-12T14:30:00'
+				},
+				{
+					title: 'Happy Hour',
+					start: '2016-12-12T17:30:00'
+				},
+				{
+					title: 'Dinner',
+					start: '2016-12-12T20:00:00'
+				},
+				{
+					title: 'Birthday Party',
+					start: '2016-12-13T07:00:00'
+				},
+				{
+					title: 'Click for Google',
+					url: 'http://google.com/',
+					start: '2016-12-28'
+				}
+			]
+		});
+		
+	});
+
+</script>
+
+
+
+
+<script src='../static/js/moment.min.js'></script>
+<script src='../static/js/jquery.min.js'></script>
+<script src='../static/js/jquery-ui.min.js'></script>
+<script src='../static/js/fullcalendar.min.js'></script>
+
+
+
 
 </body>
 </html>
