--- a/banahaw/templates/content.html
+++ b/banahaw/templates/content.html
@@ -326,13 +326,13 @@
                 <tr>
                   <td>Name</td>
                   <td></td>
-                  <td><input class="input form-control" type="text" name=""></td>
+                  <td><select class="input form-control"></select></td>
                   
                 </tr>
                 <tr>
-                  <td>Branch</td>
                   <td></td>
-                  <td><input class="input form-control" type="text" name=""></td>
+                  <td></td>
+                  <td><textarea class="input form-control" id="delete-t-area"></textarea></td>
                   
                 </tr>
                 
