--- a/banahaw/templates/content.html
+++ b/banahaw/templates/content.html
@@ -5,9 +5,119 @@
 <link href="../static/css/content.css" rel="stylesheet">
 <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
+<!-- CSS for calendar-->
+<link href='../static/css/fullcalendar.css' rel='stylesheet' />
 <link href='../static/css/fullcalendar.min.css' rel='stylesheet' />
 <link href='../static/css/fullcalendar.print.min.css' rel='stylesheet' media='print' />
 
+<script src='../static/js/moment.min.js'></script>
+<script src='../static/js/jquery.min.js'></script>
+<script src='../static/js/fullcalendar.min.js'></script>
+<script>
+
+	$(document).ready(function() {
+		
+		$('#calendar').fullCalendar({
+			header: {
+				left: 'prev,next today',
+				center: 'title',
+				right: 'month,agendaWeek,agendaDay'
+			},
+			defaultDate: '2016-12-12',
+			navLinks: true, 
+			selectable: true,
+			selectHelper: true,
+			select: function(start, end) {
+				var title = prompt('Event Title:');
+				var eventData;
+				if (title) {
+					eventData = {
+						title: title,
+						start: start,
+						end: end
+					};
+					$('#calendar').fullCalendar('renderEvent', eventData, true); 
+				}
+				$('#calendar').fullCalendar('unselect');
+			},
+			editable: true,
+			eventLimit: true, 
+			events: [
+				{
+					title: 'All Day Event',
+					start: '2016-12-01'
+				},
+				{
+					title: 'Long Event',
+					start: '2016-12-07',
+					end: '2016-12-10'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2016-12-09T16:00:00'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2016-12-16T16:00:00'
+				},
+				{
+					title: 'Conference',
+					start: '2016-12-11',
+					end: '2016-12-13'
+				},
+				{
+					title: 'Meeting',
+					start: '2016-12-12T10:30:00',
+					end: '2016-12-12T12:30:00'
+				},
+				{
+					title: 'Lunch',
+					start: '2016-12-12T12:00:00'
+				},
+				{
+					title: 'Meeting',
+					start: '2016-12-12T14:30:00'
+				},
+				{
+					title: 'Happy Hour',
+					start: '2016-12-12T17:30:00'
+				},
+				{
+					title: 'Dinner',
+					start: '2016-12-12T20:00:00'
+				},
+				{
+					title: 'Birthday Party',
+					start: '2016-12-13T07:00:00'
+				},
+				{
+					title: 'Click for Google',
+					url: 'http://google.com/',
+					start: '2016-12-28'
+				}
+			]
+		});
+		
+	});
+
+</script>
+<style>
+
+	body {
+		margin: 40px 10px;
+		padding: 0;
+		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+		font-size: 14px;
+	}
+
+	#calendar {
+		max-width: 900px;
+		margin: 0 auto;
+	}
+
+</style>
 	<title></title>
 </head>
 <body>
@@ -359,56 +469,10 @@
 	</div>
 	</div>
 
-	
-<p id="user">5</p>
+<p id="adduser">5</p>
 <br><br>
 <div class="div-content">
-	<ul class="tab">
-		<li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'add')" id="defaultOpen">Add</a></li>
-  		<li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'delete')">Delete</a></li>
-	</ul>
-	<div id="delete" class="form3 tabcontent">
-		<div class="table-responsive">
-            <table class="table table-striped"">
-              
-              <tbody>
-              	
-              	<tr>
-                  <td colspan="3">Delete User</td> 
-                </tr>
-                
-                <tr>
-                  <td>Name</td>
-                  <td colspan="3"><input class="input form-control" type="text" name=""></td>
-                </tr>
-                
-                <tr>
-                  <td>Branch</td>
-                  <td colspan="3"><input class="input form-control" type="text" name=""></td>
-                </tr>
-                
-                
-                <tr>
-                  <td></td>
-                  
-                  <td colspan="3"><input id="button1" class="input form-control" type="submit" name="" value="Delete"><input class="input form-control" type="submit" name="" value="Cancel"></td>
-                  </tr>
-                
-                <tr>
-                	<td></td>
-                  	
-                	<td><div class="alert alert-success" role="alert">
-        			<strong>Delete Successful!</strong><img src="../static/img/check.png">
-   					</div></td>
-   					
-                </tr>
-                
-              </tbody>
-            </table>
-            
-          </div>
-        </div>
-    <div id="add" class="form3 tabcontent">
+	<div class="form2">
 		<div class="table-responsive">
             <table class="table table-striped">
               
@@ -450,8 +514,57 @@
             </table>
             
         </div>
+
 	</div>
-</div>
+	</div>
+
+<p id="deleteuser">5</p>
+<br><br>
+<div class="div-content">
+	<div class="form2">
+		<div class="table-responsive">
+            <table class="table table-striped"">
+              
+              <tbody>
+              	
+              	<tr>
+                  <td colspan="3">Delete User</td> 
+                </tr>
+                
+                <tr>
+                  <td>Name</td>
+                  <td colspan="3"><input class="input form-control" type="text" name=""></td>
+                </tr>
+                
+                <tr>
+                  <td>Branch</td>
+                  <td colspan="3"><input class="input form-control" type="text" name=""></td>
+                </tr>
+                
+                
+                <tr>
+                  <td></td>
+                  
+                  <td colspan="3"><input id="button1" class="input form-control" type="submit" name="" value="Delete"><input class="input form-control" type="submit" name="" value="Cancel"></td>
+                  </tr>
+                
+                <tr>
+                	<td></td>
+                  	
+                	<td><div class="alert alert-success" role="alert">
+        			<strong>Delete Successful!</strong><img src="../static/img/check.png">
+   					</div></td>
+   					
+                </tr>
+                
+              </tbody>
+            </table>
+            
+          </div>
+        </div>
+	</div>
+	</div>
+
 	
 <p id="promo">6</p>
 <br><br>
@@ -504,135 +617,14 @@
 	</div>
 	</div>
 
-<p id="reserve">7</p>
-<br><br>
-<div class="div-content">
-	<div id='calendar'></div>
-</div>
+<div id="calendar"></div>
 
 
 
-<script>
-function openTab(evt, tabName) {
-    
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-    }
-	tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-	document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
-    }
-</script>
+<!-- js for calendar-->
 
-<script>
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-
-
-
-<script type="text/javascript">
-$(document).ready(function() {
-		
-		$('#calendar').fullCalendar({
-			header: {
-				left: 'prev,next today',
-				center: 'title',
-				right: 'month,agendaWeek,agendaDay'
-			},
-			defaultDate: '2016-12-12',
-			navLinks: true, // can click day/week names to navigate views
-			selectable: true,
-			selectHelper: true,
-			select: function(start, end) {
-				var title = prompt('Event Title:');
-				var eventData;
-				if (title) {
-					eventData = {
-						title: title,
-						start: start,
-						end: end
-					};
-					$('#calendar').fullCalendar('renderEvent', eventData, true); // stick? = true
-				}
-				$('#calendar').fullCalendar('unselect');
-			},
-			editable: true,
-			eventLimit: true, // allow "more" link when too many events
-			events: [
-				{
-					title: 'All Day Event',
-					start: '2016-12-01'
-				},
-				{
-					title: 'Long Event',
-					start: '2016-12-07',
-					end: '2016-12-10'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-09T16:00:00'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-16T16:00:00'
-				},
-				{
-					title: 'Conference',
-					start: '2016-12-11',
-					end: '2016-12-13'
-				},
-				{
-					title: 'Meeting',
-					start: '2016-12-12T10:30:00',
-					end: '2016-12-12T12:30:00'
-				},
-				{
-					title: 'Lunch',
-					start: '2016-12-12T12:00:00'
-				},
-				{
-					title: 'Meeting',
-					start: '2016-12-12T14:30:00'
-				},
-				{
-					title: 'Happy Hour',
-					start: '2016-12-12T17:30:00'
-				},
-				{
-					title: 'Dinner',
-					start: '2016-12-12T20:00:00'
-				},
-				{
-					title: 'Birthday Party',
-					start: '2016-12-13T07:00:00'
-				},
-				{
-					title: 'Click for Google',
-					url: 'http://google.com/',
-					start: '2016-12-28'
-				}
-			]
-		});
-		
-	});
-
-</script>
-
-
-
-
-<script src='../static/js/moment.min.js'></script>
-<script src='../static/js/jquery.min.js'></script>
 <script src='../static/js/jquery-ui.min.js'></script>
-<script src='../static/js/fullcalendar.min.js'></script>
+
 
 
 
