--- a/banahaw/templates/admin.html
+++ b/banahaw/templates/admin.html
@@ -44,7 +44,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="admin.html"><img id="logo" src="../static/img/banahaw4.png"></a>
+                
             </div>
+            <a id="logout" href="banahaw.login.html">Logout</a>
             <!-- Top Menu Items -->
             
                 
