--- a/banahaw/templates/content.html
+++ b/banahaw/templates/content.html
@@ -10,99 +10,6 @@
 <link href='../static/css/fullcalendar.min.css' rel='stylesheet' />
 <link href='../static/css/fullcalendar.print.min.css' rel='stylesheet' media='print' />
 
-<script src='../static/js/moment.min.js'></script>
-<script src='../static/js/jquery.min.js'></script>
-<script src='../static/js/fullcalendar.min.js'></script>
-<script>
-
-	$(document).ready(function() {
-		
-		$('#calendar').fullCalendar({
-			header: {
-				left: 'prev,next today',
-				center: 'title',
-				right: 'month,agendaWeek,agendaDay'
-			},
-			defaultDate: '2016-12-12',
-			navLinks: true, 
-			selectable: true,
-			selectHelper: true,
-			select: function(start, end) {
-				var title = prompt('Event Title:');
-				var eventData;
-				if (title) {
-					eventData = {
-						title: title,
-						start: start,
-						end: end
-					};
-					$('#calendar').fullCalendar('renderEvent', eventData, true); 
-				}
-				$('#calendar').fullCalendar('unselect');
-			},
-			editable: true,
-			eventLimit: true, 
-			events: [
-				{
-					title: 'All Day Event',
-					start: '2016-12-01'
-				},
-				{
-					title: 'Long Event',
-					start: '2016-12-07',
-					end: '2016-12-10'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-09T16:00:00'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: '2016-12-16T16:00:00'
-				},
-				{
-					title: 'Conference',
-					start: '2016-12-11',
-					end: '2016-12-13'
-				},
-				{
-					title: 'Meeting',
-					start: '2016-12-12T10:30:00',
-					end: '2016-12-12T12:30:00'
-				},
-				{
-					title: 'Lunch',
-					start: '2016-12-12T12:00:00'
-				},
-				{
-					title: 'Meeting',
-					start: '2016-12-12T14:30:00'
-				},
-				{
-					title: 'Happy Hour',
-					start: '2016-12-12T17:30:00'
-				},
-				{
-					title: 'Dinner',
-					start: '2016-12-12T20:00:00'
-				},
-				{
-					title: 'Birthday Party',
-					start: '2016-12-13T07:00:00'
-				},
-				{
-					title: 'Click for Google',
-					url: 'http://google.com/',
-					start: '2016-12-28'
-				}
-			]
-		});
-		
-	});
-
-</script>
 
 	<title></title>
 </head>
@@ -603,11 +510,193 @@
 	</div>
 	</div>
 
-<div id="calendar"></div>
+
+<p id="report">7</p>
+<div class="div-content">
+	<div>
+		<div class="table-responsive report-table">
+            <table class="table table-striped">
+              
+              <tbody>
+                <tr>
+                  <td colspan="7">Banahaw Heals Spa - Attendant Sales Report</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Name of Employee</td>
+                  <td>Time-in</td>
+                  <td>Time-out</td>
+                  <td>Allowance</td>
+                  <td>Commision on service</td>
+                  <td>Incentive on Membership</td>
+                  <td>Total per Attendant</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                </tr>
+                
+                <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                </tr>
+                
+                <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+                
+                <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>
+
+                 <tr>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                 </tr>	
+
+                 <tr>
+                  <td>Total</td>
+                  <td></td>
+                  <td></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td><input class="report-input" type="" name=""></td>
+                  <td></td>
+                 </tr>	
+
+              </tbody>
+            </table>
+            
+          </div>
+
+	</div>
+	</div>
 
 
 
-<!-- js for calendar-->
 
 <script src='../static/js/jquery-ui.min.js'></script>
 
